--- a/package.json
+++ b/package.json
@@ -6,8 +6,53 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
+        "axios": "^1.6.8",
+        "bootstrap": "^4.0.0",
+        "cross-env": "^5.1",
+        "husky": "^9.0.11",
+        "jquery": "^3.2",
+        "laravel-mix": "^4.0.7",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "lodash": "^4.17.5",
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
+        "summernote": "^0.8.11",
+        "vite": "^5.0",
+        "vue": "^3.4.25",
+        "vue-template-compiler": "^2.5.21"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm test",
+            "pre-push": "npm run lint"
+        }
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.2",
+        "bootstrap": "^5.3.3",
+        "codemirror": "^6.0.1",
+        "cross-env": "^7.0.3",
+        "jquery": "^3.7.1",
+        "laravel-mix": "^6.0.49",
+        "laravel-vue-pagination": "^4.1.3",
+        "lodash": "^4.17.21",
+        "moment": "^2.30.1",
+        "popper.js": "^1.16.1",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.75.0",
+        "sass-loader": "^14.2.1",
+        "summernote": "^0.8.20",
+        "sweetalert2": "^11.10.8",
+        "vform": "^2.1.2",
+        "vue": "^3.4.25",
+        "vue-progressbar": "^0.7.5",
+        "vue-route-laravel": "^1.0.4",
+        "vue-router": "^4.3.2",
+        "vue-template-compiler": "^2.7.16",
+        "vue2-timepicker": "^1.1.6",
+        "vuejs-datepicker": "^1.6.2",
+        "vuejs-timepicker": "^0.1.4"
     }
 }
